--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
     <div class="nine">
       <p data-node-name="outroText">Okay, now come back and tell me if you liked it.</p>
       <p id="replay" data-node-name="replayText">Or click, if you want to watch it again.</p>
-      <p><small>_khacduy_</small></p>
+      <p><i><small>_khacduy_</small></i></p>
       <p class="last-smile" data-node-name="outroSmiley">:)</p>
     </div>
   </div>
