--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
   <link rel="shortcut icon" type="image/png" href="img/favicon.png" />
   <link rel="stylesheet" href="style/style.css">
 </head>
-
+<body><h3>Nothing there!</h3></body>
+<!-- 
 <body>
   <div class="container">
     <div class="one">
@@ -89,8 +90,7 @@
         <circle cx="20" cy="20" r="20" />
       </svg>
       <svg viewBox="0 0 40 40" xmlns="http://www.w3.org/2000/svg">
-        <circle cx="20" cy="20" r="20" />
-      </svg>
+        <circle cx="20" cy="20" r="20" /> </svg>
       <svg viewBox="0 0 40 40" xmlns="http://www.w3.org/2000/svg">
         <circle cx="20" cy="20" r="20" />
       </svg>
@@ -121,7 +121,7 @@
     </div>
   </div>
 </body>
-
+-->
 <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/1.20.3/TweenMax.min.js"></script>
 <script type="application/javascript" src="script/main.js"></script>
 
